# dew-encryption

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  installer.yml  release.yml
csharp/: DewEncryption.sln  Dockerfile  README.md
csharp/DewEncryption.Core/: AppSettings.cs  DewAutoSyncProcessService.cs  DewAutoSyncWorker.cs  DewCliService.cs  DewCommandResult.cs  DewContainerProfile.cs  DewDependencyService.cs  DewDriveService.cs  DewPathItem.cs  DewPathService.cs  DewSecretService.cs  DewSelectionService.cs  DewStartupService.cs  SettingsService.cs
csharp/DewEncryption.Gui/: App.axaml  App.axaml.cs  DewEncryption.Gui.csproj  MainWindow.axaml  MainWindow.axaml.cs  Program.cs
dew_encryption/: __init__.py  __main__.py  action_dialog.py  core.py  gui.py  gui_main.py
docs/: index.html  wiki.html
docs/handoff/: README.md  repo-scan.md
installer/: DewEncryption.iss  create-elevated-tasks.ps1  install-context-menu.ps1  install-dependencies.ps1  install-win11-context-menu.ps1  install.ps1  launch-create-elevated-tasks.ps1  launch-remove-elevated-tasks.ps1  remove-elevated-tasks.ps1  uninstall-context-menu.ps1  uninstall-win11-context-menu.ps1
linux/: dew-encryption.desktop  install.sh  uninstall.sh
linux/nautilus-scripts/: dew encryption  dew encryption VeraCrypt decrypt  dew encryption VeraCrypt encrypt  (+5 more)
scripts/: build-win11-context-menu.ps1  build-windows-installer.ps1
windows/context-menu/: CMakeLists.txt  DewExplorerCommand.cpp  DewExplorerCommand.def
windows/context-menu/package/: AppxManifest.template.xml
(+24 files in other folders)
